# fabro

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  bunfig.toml
.claude/skills/changelog/: watermark
.fabro/: project.toml
apps/fabro-web/app/: router.tsx
apps/fabro-web/scripts/: build.test.ts  build.ts
docs/brainstorms/: 2026-04-08-settings-toml-redesign-requirements.md
docs/internal/: logging-strategy.md
docs/plans/: 2026-04-08-settings-toml-redesign-implementation-plan.md  2026-04-09-settings-toml-redesign-handoff.md
docs/public/: docs.json
docs/public/agents/: mcp.mdx  subagents.mdx
docs/public/api-reference/: demo-mode.mdx  fabro-api.yaml
docs/public/changelog/: 2026-05-04.mdx  2026-05-05.mdx  2026-05-06.mdx  2026-06-10.mdx
docs/public/core-concepts/: models.mdx
docs/public/execution/: child-runs.mdx  run-configuration.mdx
docs/public/reference/: architecture.mdx  cli.mdx  server-operations.mdx  user-configuration.mdx
docs/public/tutorials/: sub-workflow.mdx
docs/public/workflows/: imports.mdx
docs/superpowers/plans/: 2026-05-06-polished-foreground-tty-logging.md  2026-05-16-static-workflow-structure-rendering.md  2026-05-17-live-provider-workflow-testing.md  2026-05-17-provider-adapter-boundary-cleanup.md  (+2 more)
lib/crates/fabro-api/: build.rs
lib/crates/fabro-mcp/: Cargo.toml
lib/crates/fabro-mcp/src/: client.rs  config.rs  http_transport.rs  lib.rs  sse_client.rs
lib/crates/fabro-mcp/tests/: stdio_integration.rs
test/templated_unbound_partial/: test-include.partial.md  test-include.prompt.md  workflow.fabro
(+324 files in other folders)
