[package]
name = "fabro-mcp"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "MCP (Model Context Protocol) client for connecting to external tool servers"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
fabro-config = { path = "../fabro-config" }
fabro-http.workspace = true
fabro-types = { path = "../fabro-types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
thiserror.workspace = true
sse-stream.workspace = true
rmcp = { workspace = true, features = [
    "client",
    "macros",
    "schemars",
    "server",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
] }

[dev-dependencies]
axum.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
tokio-stream.workspace = true
